SqlCollectionLocation: do not stop transfer when some files are already at destination

This happens when you want to import a big tree of tracks at once and some
tracks are already present in the destination collection. In this case
TransferJob's copy subjob fails with KIO::ERR_FILE_ALEADY_EXIST and causes
entire transfer to complete prematurely.

BUGFIXES:
 * Fix existing files preventing complete transfer of tracks to collection

BUG: 312001
REVIEW: 107841
FIXED-IN: 2.7